--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<lombok.version>1.18.2</lombok.version>
 		<spring.datatables.version>5.0.0</spring.datatables.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>14</java.version>
 	</properties>
 
 	<dependencies>
@@ -65,14 +66,6 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
